--- a/index.html
+++ b/index.html
@@ -1,35 +1,63 @@
 <!doctype html>
 <html>
 <head>
-	<meta charset="utf-8">
-	<meta name="description" content="">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>CS171 - Health &amp; Wealth of Nations</title>
+    <meta charset="utf-8">
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>CS316 - A4</title>
 
-	<!-- Load CSS libraries -->
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-	<link rel="stylesheet" href="css/style.css">
+    <!-- CSS libraries -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
+    <!-- Custom CSS code -->
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
-	<div class="container">
+<div class="container">
 
-		<h1>Wealth &amp; Health of Nations</h1>
+    <h1>Growth of the Three Different Species of Iris Flowers</h1>
 
-		<!-- Parent container for the scatter plot -->
-		<div id="chart-area"></div>
+    <form class="row g-3">
+        <div class="col-auto">
+            <div class="form-group">
+                <select class="form-control" id="sepal-dimension">
+                    <option value="sepal_width">Sepal width</option>
+                    <option value="sepal_length">Sepal length</option>
+                </select>
+            </div>
+        </div>
+    </form>
 
-	</div>
+    <form class="row g-3">
+        <div class="col-auto">
+            <div class="form-group">
+                <select class="form-control" id="petal-dimension">
+                    <option value="petal_width">Petal width</option>
+                    <option value="petal_length">Petal length</option>
+                </select>
+            </div>
+        </div>
+    </form>
 
 
-	<!-- Load JS libraries: jQuery, bootstrap, D3 -->
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <!-- Parent container for the visualization -->
+    <div class="row justify-content-center" style="height: 60vh">
+                <div class="align-self-center" id="chart-area" style="height: 100%; width: 100%"></div>
+            </div>
 
-	<!-- d3 -->
-	<script src="https://d3js.org/d3.v7.min.js"></script>
+</div>
 
-	<!-- own js files -->
-	<script src="js/main.js"></script>
+<!-- Load JS libraries -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
+<!-- d3 -->
+<script src="https://d3js.org/d3.v7.min.js"></script>
+
+<!-- Visualization objects -->
+<script src="js/scatterplot.js"></script>
+
+<!-- Load data, create visualizations -->
+<script src="js/main.js"></script>
 </body>
 </html>
